--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@next/third-parties": "^14.2.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-social-icons": "^6.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
